# nano_quant_skills

./: .gitignore  INDEX_WEIGHT_SYNC_GUIDE.md  README.md
2min-company-analysis/: README.md
2min-company-analysis/ask-q3-management/: SKILL.md
2min-company-analysis/ask-q5-market-position/: SKILL.md
2min-company-analysis/ask-q7-risk-factors/: SKILL.md
2min-company-analysis/ask-q8-future-plan/: SKILL.md
2min-company-analysis/look-02-cost-structure/: SKILL.md
2min-company-analysis/look-03-growth-trend/: SKILL.md
ask-q1-industry-prospect/: SKILL.md
ask-q2-moat/: SKILL.md
ask-q4-financial-integrity/: SKILL.md
ask-q6-business-model/: SKILL.md
docs/: README.md  duckdb_data_features.md
docs/tables/: _index.md  (+1 more)
look-01-profit-quality/: SKILL.md
look-06-input-output-efficiency/: SKILL.md
nano-search-mcp/: README.md  pyproject.toml
nano-search-mcp/src/nano_search_mcp/: __init__.py  __main__.py  api.py  server.py
nano-search-mcp/src/nano_search_mcp/tools/: __init__.py  announcements.py  bailian_client.py  deferred_search.py  fetch.py  industry_policies.py  industry_reports.py  ir_meetings.py  regulatory_penalties.py  search.py  sina_reports.py
nano-search-mcp/tests/: test_announcements.py  test_deferred_search.py  test_deferred_tasks_parser.py  test_fetch.py  test_industry_policies.py  test_industry_reports.py  test_ir_meetings.py  test_regulatory_penalties.py  test_search.py  test_server.py  test_sina_reports.py
seven-look-eight-question/: SKILL.md
tushare-duckdb-sync/: README.md  SKILL.md
tushare_duckdb_sync_scripts/: run_index_weight_sync.py
(+239 files in other folders)
